fix z-index on pseudo elements

--- a/chrometab.css
+++ b/chrometab.css
@@ -28,7 +28,7 @@
   padding: 5px 10px;
   position: relative;
   border-top: 1px solid #728cad;
-  margin-right: 4px;
+  margin-right: 6px;
   font-family: sans-serif;
   font-size: 14px;
 }
@@ -46,6 +46,7 @@
 .tab:before {
   left: -6px;
   border-left: 1px solid #728cad;
+  z-index: 3;
   -webkit-transform:rotate(15deg);
      -moz-transform:rotate(15deg);
       -ms-transform:rotate(15deg);
@@ -56,6 +57,7 @@
 .tab:after {
   right: -6px;
   border-right: 1px solid #728cad;
+  z-index: 4;
   -webkit-transform:rotate(-15deg);
    -moz-transform:rotate(-15deg);
     -ms-transform:rotate(-15deg);
